# SPCDNS

./: CMakeLists.txt  Resource.rc.in  Version.cmake
src/: codec.c  dns.h  mappings.h  output.h
